tests/machine/x/c/group_items_iteration.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_items_iteration.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:200:23: error: incompatible types when assigning to type ‘int’ from type ‘struct <anonymous>’
  200 |     tmp7.data[tmp8] = g;
      |                       ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:209:34: error: request for member ‘items’ in something not a structure or union
  209 |     for (int tmp12 = 0; tmp12 < g.items.len; tmp12++) {
      |                                  ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:210:21: error: request for member ‘items’ in something not a structure or union
  210 |       DataItem x = g.items.data[tmp12];
      |                     ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:215:38: error: request for member ‘key’ in something not a structure or union
  215 |     map_int_bool_put(&tmp14, "tag", g.key);
      |                                      ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:215:30: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
  215 |     map_int_bool_put(&tmp14, "tag", g.key);
      |                              ^~~~~
      |                              |
      |                              char *
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:77:51: note: expected ‘int’ but argument is of type ‘char *’
   77 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:216:30: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
  216 |     map_int_bool_put(&tmp14, "total", total);
      |                              ^~~~~~~
      |                              |
      |                              char *
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:77:51: note: expected ‘int’ but argument is of type ‘char *’
   77 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:219:21: error: incompatible types when assigning to type ‘int’ from type ‘map_int_bool’
  219 |     tmp15.data[0] = tmp14;
      |                     ^~~~~
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:220:38: error: incompatible type for argument 1 of ‘concat_list_int’
  220 |     list_int tmp16 = concat_list_int(tmp13, tmp15);
      |                                      ^~~~~
      |                                      |
      |                                      int *
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:96:42: note: expected ‘list_int’ but argument is of type ‘int *’
   96 | static list_int concat_list_int(list_int a, list_int b) {
      |                                 ~~~~~~~~~^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:221:9: error: assignment to expression with array type
  221 |     tmp = tmp16;
      |         ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:224:41: error: request for member ‘len’ in something not a structure or union
  224 |   list_int tmp18 = list_int_create(tmp17.len);
      |                                         ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:225:49: error: request for member ‘len’ in something not a structure or union
  225 |   int *tmp21 = (int *)malloc(sizeof(int) * tmp17.len);
      |                                                 ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:227:36: error: request for member ‘len’ in something not a structure or union
  227 |   for (int tmp20 = 0; tmp20 < tmp17.len; tmp20++) {
      |                                    ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:228:18: error: request for member ‘data’ in something not a structure or union
  228 |     int r = tmp17.data[tmp20];
      |                  ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:230:21: error: request for member ‘tag’ in something not a structure or union
  230 |     tmp21[tmp19] = r.tag;
      |                     ^

   1: #include <stdio.h>
